@@ -9,6 +9,7 @@ GSM=@PBX_GSM@
 GTK2=@PBX_GTK2@
 GTK=@PBX_GTK@
 H323=@PBX_H323@
+HOARD=@PBX_HOARD@
 ICONV=@PBX_ICONV@
 IKSEMEL=@PBX_IKSEMEL@
 IMAP_TK=@PBX_IMAP_TK@
