@@ -84,6 +84,8 @@ FREETDS_LIB=@FREETDS_LIB@
 GMIME_INCLUDE=@GMIME_INCLUDE@
 GMIME_LIB=@GMIME_LIB@
 
+HOARD_LIB=@HOARD_LIB@
+
 GSM_INTERNAL=@GSM_INTERNAL@
 GSM_INCLUDE=@GSM_INCLUDE@
 GSM_LIB=@GSM_LIB@
